samples/_failures_safe/1761345546_abe32b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_646d3505.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_646d3505.c:161: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_646d3505.c:160:5: error: expected declaration or statement at end of input
  160 |     for
      |     ^~~
